--- a/Site/HTML/pergunta14/errado14B.html
+++ b/Site/HTML/pergunta14/errado14B.html
@@ -18,6 +18,9 @@
                 <div>
                     <a href="/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
+                <div>
+                    <a href="/HTML/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                </div>  
             </div> 
         </div>
     </div>
